correction du collapse et de flèche

--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,14 @@ button.carousel-control-next, button.carousel-control-prev {
   opacity: 1;
 }
 
+.carousel-control-next-icon:hover, .carousel-control-prev-icon:hover {
+  background-color: #0d6dfc;
+  border-radius: 25px;
+  width: 40px;
+  height: 40px;
+  border: 5px solid #0d6dfc;
+}
+
 @media (max-width: 1200px) {
   .toutou .toutou--paws img {
     width: 100px;
